force-app/main/default/objects/Contact/fields/crisisapp__DLImage__c.field-meta.xml
<CustomField>
    <fullName>crisisapp__DLImage__c</fullName>
    <formula>IF(ISBLANK( crisisapp__DLImageContentId__c ), &quot;&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot; &amp;  crisisapp__DLImageContentId__c ,&quot;&quot;, 200, 330))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DL Image</label>
    <type>Text</type>
</CustomField>