force-app/main/default/objects/Contact/fields/crisisapp__DLImageContentId__c.field-meta.xml
<CustomField>
    <fullName>crisisapp__DLImageContentId__c</fullName>
    <label>DLImageContentId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>