force-app/main/default/objects/Contact/fields/crisisapp__OrganDonor__c.field-meta.xml
<CustomField>
    <fullName>crisisapp__OrganDonor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organ Donor</label>
    <type>Checkbox</type>
</CustomField>